// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend:  should handle external hover 1`] = `
<Grid>
  <Grid.Column>
    <PieChart.LegendItem
      hovered={true}
      key="0"
      name="primary"
      onClick={[Function]}
      onMouseOut={
        [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
          ],
        }
      }
      onMouseOver={[Function]}
      otherHovered={false}
    />
  </Grid.Column>
  <Grid.Column>
    <PieChart.LegendItem
      hovered={false}
      key="0"
      name="secondary"
      onClick={[Function]}
      onMouseOut={
        [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
          ],
        }
      }
      onMouseOver={[Function]}
      otherHovered={true}
    />
  </Grid.Column>
</Grid>
`;

exports[`Legend:  should render 1`] = `
<div>
  <div>
    <PieChart.LegendItem
      key="0"
      name="header"
    />
  </div>
  <Grid>
    <Grid.Column>
      <PieChart.LegendItem
        hovered={false}
        key="0"
        name="primary"
        onClick={[Function]}
        onMouseOut={[MockFunction]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
  </Grid>
</div>
`;

exports[`Legend:  should render with secondaryData 1`] = `
<div>
  <div>
    <PieChart.LegendItem
      key="0"
      name="header"
    />
  </div>
  <Grid>
    <Grid.Column>
      <PieChart.LegendItem
        hovered={false}
        key="0"
        name="primary"
        onClick={[Function]}
        onMouseOut={[MockFunction]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
    <Grid.Column>
      <PieChart.LegendItem
        hovered={false}
        key="0"
        name="secondary"
        onClick={[Function]}
        onMouseOut={[MockFunction]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
  </Grid>
</div>
`;
